tests/errors/semantics/compound_assignment_no_logical_cap.odl
main :: () -> void  {
    x := 1;
    x or= 2;
};